namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name:  homework
  labels:
    name:  homework
