deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework2
  namespace: homework
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: homework
          mountPath: /usr/share/nginx/html/
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - "[ -f /usr/share/nginx/html/index.html ]"
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: homework
          hostPath:
            path: /usr/share/nginx/html/
        - name: init
          hostPath:
            path: /usr/share/nginx/html/
