pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: homework-pod
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: homework
      mountPath: /usr/share/nginx/html/
    lifecycle:
      preStop:
        exec:
          command: ["/bin/sh","-c", rm /usr/share/nginx/html/index.html]
  volumes:
    - name: homework
      hostPath:
        path: /usr/share/nginx/html/
    - name: init
      hostPath:
        path: /usr/share/nginx/html/
