Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    prometheus.io/port: "metrics"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/part-of: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 9113
      targetPort: 9113
      name: metrics
