service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-deployment
spec:
  type: NodePort
  selector:
    app: homework2
  ports:
    - port: 8000
      targetPort: 8000
