ingree-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-operated
spec:
  rules:
    - host: prometheus
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
