ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-deployment
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homework-deployment
                port:
                  number: 8000
